--- a/JavaCodingProblems/build.gradle
+++ b/JavaCodingProblems/build.gradle
@@ -1,3 +1,18 @@
 plugins {
     id 'java'
 }
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    implementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    implementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
+    implementation 'org.junit.platform:junit-platform-suite:1.9.0'
+}
+
+test {
+    useJUnitPlatform()
+}
