--- a/JavaCodingProblems/build.gradle
+++ b/JavaCodingProblems/build.gradle
@@ -11,6 +11,8 @@ dependencies {
     implementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
     implementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
     implementation 'org.junit.platform:junit-platform-suite:1.9.0'
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
+    runtimeOnly 'org.glassfish.expressly:expressly:5.0.0' // jakarta.el required by Hibernate Validator: https://github.com/jakartaee/expression-language
 }
 
 test {
