--- a/JavaCodingProblems/build.gradle
+++ b/JavaCodingProblems/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'org.junit.platform:junit-platform-suite:1.9.0'
     implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
     runtimeOnly 'org.glassfish.expressly:expressly:5.0.0' // jakarta.el required by Hibernate Validator: https://github.com/jakartaee/expression-language
+    implementation 'io.github.kostaskougios:cloning:1.10.3'
 }
 
 test {
