--- a/MicroservicesAndDistributedSystems/amigosservices/customer/src/main/resources/application.yml
+++ b/MicroservicesAndDistributedSystems/amigosservices/customer/src/main/resources/application.yml
@@ -14,5 +14,11 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: 'true'
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop # don't do it on production or environment where you want to keep your data
     show-sql: 'true'
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+    fetch-registry: true # default
+    register-with-eureka: true # default
