--- a/MicroservicesAndDistributedSystems/fraud/pom.xml
+++ b/MicroservicesAndDistributedSystems/fraud/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.github.marcinciapa</groupId>
-        <artifactId>amigosservices</artifactId>
+        <artifactId>mads</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>customer</artifactId>
+    <artifactId>fraud</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
