--- a/MicroservicesAndDistributedSystems/pom.xml
+++ b/MicroservicesAndDistributedSystems/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.marcinciapa</groupId>
-    <artifactId>amigosservices</artifactId>
+    <artifactId>mads</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>amigosservices</name>
+    <name>mads</name>
     <url>https://github.com/marcinciapa/tutorials/tree/master/MicroservicesAndDistributedSystems</url>
 
     <modules>
