--- a/MicroservicesAndDistributedSystems/eureka-server/src/main/resources/application.yml
+++ b/MicroservicesAndDistributedSystems/eureka-server/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 spring:
   application:
     name: eureka-server
+  zipkin:
+    base-url: http://localhost:9411 # defult
 eureka:
   client:
     fetch-registry: false
