--- a/MicroservicesAndDistributedSystems/notification/src/main/resources/application.yml
+++ b/MicroservicesAndDistributedSystems/notification/src/main/resources/application.yml
@@ -18,9 +18,18 @@ spring:
     show-sql: 'true'
   zipkin:
     base-url: http://localhost:9411 # defult
+  rabbitmq:
+    addresses: localhost:5672
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
     fetch-registry: true # default
     register-with-eureka: true # default
+rabbitmq:
+  exchanges:
+    internal: internal.exchange
+  queues:
+    notification: notification.queue
+  routing-keys:
+    internal-notification: internal.notification.routing.key
