--- a/MicroservicesAndDistributedSystems/fraud/pom.xml
+++ b/MicroservicesAndDistributedSystems/fraud/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.github.marcinciapa</groupId>
+        <groupId>com.github.marcinciapa.tutorials.mads</groupId>
         <artifactId>mads</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -40,7 +40,7 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.marcinciapa</groupId>
+            <groupId>com.github.marcinciapa.tutorials.mads</groupId>
             <artifactId>clients</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
