--- a/MicroservicesAndDistributedSystems/notification/pom.xml
+++ b/MicroservicesAndDistributedSystems/notification/pom.xml
@@ -43,6 +43,7 @@
             <groupId>com.github.marcinciapa.tutorials.mads</groupId>
             <artifactId>clients</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -60,6 +61,7 @@
             <groupId>com.github.marcinciapa.tutorials.mads</groupId>
             <artifactId>amqp</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
