Mads runnable jar (#21)
* Install required packages

* Repackage code

* Microservices and Distributed Systems - Packaging Microservices to Runnable Jar

--- a/MicroservicesAndDistributedSystems/notification/pom.xml
+++ b/MicroservicesAndDistributedSystems/notification/pom.xml
@@ -4,18 +4,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.github.marcinciapa</groupId>
+        <groupId>com.github.marcinciapa.tutorials.mads</groupId>
         <artifactId>mads</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>notification</artifactId>
+    <packaging>jar</packaging>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
@@ -36,9 +40,10 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.marcinciapa</groupId>
+            <groupId>com.github.marcinciapa.tutorials.mads</groupId>
             <artifactId>clients</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -53,9 +58,10 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.marcinciapa</groupId>
+            <groupId>com.github.marcinciapa.tutorials.mads</groupId>
             <artifactId>amqp</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
