--- a/MicroservicesAndDistributedSystems/clients/pom.xml
+++ b/MicroservicesAndDistributedSystems/clients/pom.xml
@@ -4,17 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.github.marcinciapa</groupId>
+        <groupId>com.github.marcinciapa.tutorials.mads</groupId>
         <artifactId>mads</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>clients</artifactId>
-
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <packaging>jar</packaging>
 
 </project>
