--- a/MicroservicesAndDistributedSystems/pom.xml
+++ b/MicroservicesAndDistributedSystems/pom.xml
@@ -84,7 +84,7 @@
                 <plugin>
                     <groupId>com.google.cloud.tools</groupId>
                     <artifactId>jib-maven-plugin</artifactId>
-                    <version>3.1.4.</version>
+                    <version>3.1.4</version>
                     <configuration>
                         <from>
                             <image>eclipse-temurin:17@sha256:2b47a8ea946ce1e5365a1562414ed576e378b7b670cadff3fb98ebecf2890cdc</image>
@@ -105,6 +105,14 @@
                             </tags>
                         </to>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>build</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
