--- a/MicroservicesAndDistributedSystems/docker-compose.yml
+++ b/MicroservicesAndDistributedSystems/docker-compose.yml
@@ -34,6 +34,8 @@ services:
     container_name: zipkin
     ports:
       - "9411:9411"
+    networks:
+      - spring
 
   rabbitmq: # default username/password: guest/guest
     image: rabbitmq:3.9.11-management-alpine
@@ -42,8 +44,35 @@ services:
       - "5672:5672"
       - "15672:15672"
 
+  eureka-server:
+    image: c4rb0n/eureka-server:latest
+    container_name: eureka-server
+    ports:
+      - "8761:8761"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      - zipkin
+    networks:
+      - spring
+
+  apigw:
+    image: c4rb0n/apigw:latest
+    container_name: apigw
+    ports:
+      - "8083:8083"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      - zipkin
+      - eureka-server
+    networks:
+      - spring
+
 networks:
   postgres:
+    driver: bridge
+  spring:
     driver: bridge
 
 volumes:
