--- a/MicroservicesAndDistributedSystems/docker-compose.yml
+++ b/MicroservicesAndDistributedSystems/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   postgres:
     container_name: postgres
-    image: postgres
+    image: postgres:15.5
     environment:
       POSTGRES_USER: amigoscode
       POSTGRES_PASSWORD: password
@@ -29,6 +29,15 @@ services:
       - postgres
     restart: unless-stopped
 
+  rabbitmq: # default username/password: guest/guest
+    image: rabbitmq:3.9.11-management-alpine
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - spring
+
   zipkin:
     image: openzipkin/zipkin
     container_name: zipkin
@@ -36,13 +45,6 @@ services:
       - "9411:9411"
     networks:
       - spring
-
-  rabbitmq: # default username/password: guest/guest
-    image: rabbitmq:3.9.11-management-alpine
-    container_name: rabbitmq
-    ports:
-      - "5672:5672"
-      - "15672:15672"
 
   eureka-server:
     image: c4rb0n/eureka-server:latest
@@ -68,6 +70,54 @@ services:
       - eureka-server
     networks:
       - spring
+
+  fraud:
+    image: c4rb0n/fraud:latest
+    container_name: fraud
+    ports:
+      - "8081:8081"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      - zipkin
+      - eureka-server
+      - postgres
+      - rabbitmq # for future maybe
+    networks:
+      - spring
+      - postgres
+
+  notification:
+    image: c4rb0n/notification:latest
+    container_name: notification
+    ports:
+      - "8082:8082"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      - zipkin
+      - eureka-server
+      - postgres
+      - rabbitmq
+    networks:
+      - spring
+      - postgres
+
+  customer:
+    image: c4rb0n/customer:latest
+    container_name: customer
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      - zipkin
+      - eureka-server
+      - postgres
+      - rabbitmq
+    networks:
+      - spring
+      - postgres
 
 networks:
   postgres:
