Microservices and Distributed Systems - Refactoring Microservices to k8s

--- a/MicroservicesAndDistributedSystems/docker-compose.yml
+++ b/MicroservicesAndDistributedSystems/docker-compose.yml
@@ -46,30 +46,30 @@ services:
     networks:
       - spring
 
-  eureka-server:
-    image: c4rb0n/eureka-server:latest
-    container_name: eureka-server
-    ports:
-      - "8761:8761"
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    depends_on:
-      - zipkin
-    networks:
-      - spring
+#  eureka-server:
+#    image: c4rb0n/eureka-server:latest
+#    container_name: eureka-server
+#    ports:
+#      - "8761:8761"
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#    depends_on:
+#      - zipkin
+#    networks:
+#      - spring
 
-  apigw:
-    image: c4rb0n/apigw:latest
-    container_name: apigw
-    ports:
-      - "8083:8083"
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    depends_on:
-      - zipkin
-      - eureka-server
-    networks:
-      - spring
+#  apigw:
+#    image: c4rb0n/apigw:latest
+#    container_name: apigw
+#    ports:
+#      - "8083:8083"
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#    depends_on:
+#      - zipkin
+#      - eureka-server
+#    networks:
+#      - spring
 
   fraud:
     image: c4rb0n/fraud:latest
@@ -80,7 +80,6 @@ services:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
       - zipkin
-      - eureka-server
       - postgres
       - rabbitmq # for future maybe
     networks:
@@ -96,7 +95,6 @@ services:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
       - zipkin
-      - eureka-server
       - postgres
       - rabbitmq
     networks:
@@ -112,7 +110,6 @@ services:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
       - zipkin
-      - eureka-server
       - postgres
       - rabbitmq
     networks:
