--- a/MicroservicesAndDistributedSystems/customer/src/main/resources/application-docker.yml
+++ b/MicroservicesAndDistributedSystems/customer/src/main/resources/application-docker.yml
@@ -26,3 +26,4 @@ eureka:
       defaultZone: http://eureka-server:8761/eureka
     fetch-registry: true # default
     register-with-eureka: true # default
+    enabled: false # for k8s
