--- a/MicroservicesAndDistributedSystems/fraud/src/main/resources/application-kube.yml
+++ b/MicroservicesAndDistributedSystems/fraud/src/main/resources/application-kube.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8080
+  port: 8081
 
 spring:
   application:
-    name: customer
+    name: fraud
   datasource:
     username: 'amigoscode'
-    url: jdbc:postgresql://localhost:5432/customer
+    url: jdbc:postgresql://postgres:5432/fraud
     password: 'password'
   jpa:
     properties:
@@ -14,16 +14,15 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: 'true'
     hibernate:
-      ddl-auto: create-drop # don't do it on production or environment where you want to keep your data
+      ddl-auto: update
     show-sql: 'true'
   zipkin:
-    base-url: http://localhost:9411 # defult
-  rabbitmq:
-    addresses: localhost:5672
+    base-url: http://zipkin:9411 # defult
+# we can remove it, as we don't use Eureka
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka
     fetch-registry: true # default
     register-with-eureka: true # default
     enabled: false # for k8s
