--- a/MicroservicesAndDistributedSystems/notification/src/main/resources/application-kube.yml
+++ b/MicroservicesAndDistributedSystems/notification/src/main/resources/application-kube.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8080
+  port: 8082
 
 spring:
   application:
-    name: customer
+    name: notification
   datasource:
     username: 'amigoscode'
-    url: jdbc:postgresql://localhost:5432/customer
+    url: jdbc:postgresql://postgres:5432/notification
     password: 'password'
   jpa:
     properties:
@@ -17,13 +17,21 @@ spring:
       ddl-auto: create-drop # don't do it on production or environment where you want to keep your data
     show-sql: 'true'
   zipkin:
-    base-url: http://localhost:9411 # defult
+    base-url: http://zipkin:9411 # defult
   rabbitmq:
-    addresses: localhost:5672
+    addresses: rabbitmq:5672
+# we can remove it, as we don't use Eureka
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka
     fetch-registry: true # default
     register-with-eureka: true # default
     enabled: false # for k8s
+rabbitmq:
+  exchanges:
+    internal: internal.exchange
+  queues:
+    notification: notification.queue
+  routing-keys:
+    internal-notification: internal.notification.routing.key
