--- a/MicroservicesAndDistributedSystems/notification/src/main/resources/application.yml
+++ b/MicroservicesAndDistributedSystems/notification/src/main/resources/application.yml
@@ -26,6 +26,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka
     fetch-registry: true # default
     register-with-eureka: true # default
+    enabled: false # for k8s
 rabbitmq:
   exchanges:
     internal: internal.exchange
