--- a/MicroservicesAndDistributedSystems/docker-compose.yml
+++ b/MicroservicesAndDistributedSystems/docker-compose.yml
@@ -71,50 +71,50 @@ services:
 #    networks:
 #      - spring
 
-  fraud:
-    image: c4rb0n/fraud:latest
-    container_name: fraud
-    ports:
-      - "8081:8081"
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    depends_on:
-      - zipkin
-      - postgres
-      - rabbitmq # for future maybe
-    networks:
-      - spring
-      - postgres
-
-  notification:
-    image: c4rb0n/notification:latest
-    container_name: notification
-    ports:
-      - "8082:8082"
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    depends_on:
-      - zipkin
-      - postgres
-      - rabbitmq
-    networks:
-      - spring
-      - postgres
-
-  customer:
-    image: c4rb0n/customer:latest
-    container_name: customer
-    ports:
-      - "8080:8080"
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    depends_on:
-      - zipkin
-      - postgres
-      - rabbitmq
-    networks:
-      - spring
-      - postgres
+#  fraud:
+#    image: c4rb0n/fraud:latest
+#    container_name: fraud
+#    ports:
+#      - "8081:8081"
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#    depends_on:
+#      - zipkin
+#      - postgres
+#      - rabbitmq # for future maybe
+#    networks:
+#      - spring
+#      - postgres
+#
+#  notification:
+#    image: c4rb0n/notification:latest
+#    container_name: notification
+#    ports:
+#      - "8082:8082"
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#    depends_on:
+#      - zipkin
+#      - postgres
+#      - rabbitmq
+#    networks:
+#      - spring
+#      - postgres
+#
+#  customer:
+#    image: c4rb0n/customer:latest
+#    container_name: customer
+#    ports:
+#      - "8080:8080"
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#    depends_on:
+#      - zipkin
+#      - postgres
+#      - rabbitmq
+#    networks:
+#      - spring
+#      - postgres
 
 networks:
   postgres:
