--- a/ProfessionalFullStackDeveloper/spring-boot-example/pom.xml
+++ b/ProfessionalFullStackDeveloper/spring-boot-example/pom.xml
@@ -64,7 +64,7 @@
 
 		<dependency>
 			<groupId>org.testcontainers</groupId>
-			<artifactId>postgresql4</artifactId>
+			<artifactId>postgresql</artifactId>
 			<version>1.17.6</version>
 			<scope>test</scope>
 		</dependency>
