--- a/ProfessionalFullStackDeveloper/spring-boot-example/pom.xml
+++ b/ProfessionalFullStackDeveloper/spring-boot-example/pom.xml
@@ -8,9 +8,14 @@
         <version>3.2.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>com.github.marcinciapa.tutorials.fullstack</groupId>
-    <artifactId>spring-boot-example</artifactId>
+    <artifactId>amigoscode-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <organization>
+        <name>c4rb0n</name>
+        <url>equino.ovh</url>
+    </organization>
     <name>spring-boot-example</name>
     <description>Demo project for Spring Boot</description>
     <properties>
@@ -149,6 +154,32 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <from>
+                        <image>eclipse-temurin:17</image>
+                        <platforms>
+                            <platform>
+                                <architecture>arm64</architecture>
+                                <os>linux</os>
+                            </platform>
+                            <platform>
+                                <architecture>amd64</architecture>
+                                <os>linux</os>
+                            </platform>
+                        </platforms>
+                    </from>
+                    <to>
+                        <image>docker.io/${organization.name}/${project.artifactId}:${project.version}</image>
+                        <tags>
+                            <tag>latest</tag>
+                        </tags>
+                    </to>
+                </configuration>
             </plugin>
         </plugins>
     </build>
