--- a/ProfessionalFullStackDeveloper/spring-boot-example/docker-compose.yml
+++ b/ProfessionalFullStackDeveloper/spring-boot-example/docker-compose.yml
@@ -8,34 +8,29 @@ services:
       POSTGRES_PASSWORD: password
       PGDATA: /data/postgres
     volumes:
-      - postgres:/data/postgres
+      - db:/data/postgres
     ports:
       - "5332:5432"
     networks:
-      - postgres
+      - db
     restart: unless-stopped
 
-  pgadmin:
-    container_name: pgadmin
-    image: dpage/pgadmin4
+  amigoscode-api:
+    container_name: amigoscode-api
+    image: c4rb0n/amigoscode-api
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
-      PGADMIN_CONFIG_SERVER_MODE: False
-    volumes:
-      - pgadmin:/var/lib/pgadmin
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/customer
     ports:
-      - "5050:80"
+      - "8088:8080"
     networks:
-      - postgres
-    restart: unless-stopped
+      - db
     depends_on:
       - db
+    restart: unless-stopped
 
 networks:
-  postgres:
+  db:
     driver: bridge
 
 volumes:
-  postgres:
-  pgadmin:
+  db:
