--- a/ProfessionalFullStackDeveloper/spring-boot-example/pom.xml
+++ b/ProfessionalFullStackDeveloper/spring-boot-example/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -12,15 +13,18 @@
     <groupId>com.github.marcinciapa.tutorials.fullstack</groupId>
     <artifactId>amigoscode-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+
     <organization>
         <name>c4rb0n</name>
         <url>equino.ovh</url>
     </organization>
-    <name>spring-boot-example</name>
-    <description>Demo project for Spring Boot</description>
+
     <properties>
-        <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <docker.username>c4rb0n</docker.username>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
